# PrepaGuide

./: .gitignore  README.md  config.py  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  data.json  db.py  forms.py  models.py  routes.py
app/static/assets/css/: main.css
app/static/assets/js/: extra.js
app/templates/: base.html  detail.html  guide.html  index.html  inputs.html  learn_more.html  main.html  splash.html
app/templates/auth/: login.html  sign_up.html
app/templates/filter/: index.html
tests/: conftest.py  test_auth.py  test_db.py  test_factory.py  test_routes.py
